@@ -17,12 +17,12 @@ import jakarta.servlet.http.HttpServletResponse;
 /**
  * 도로명 주소 연계를 위한 Controller
  *
- *  수정일                수정자             수정내용
- *  ----------   ---------   -------------------
- *  2014.10.21   표준프레임워크    최초생성
- *  2015.04.01   전여철            Test용 Open API confmKey encode추가
- *  2020.10.29   신용호            KISA 보안약점 조치 (경로 조작 및 자원 삽입, 크로스사이트 스크립트)
- *  2022.05.10   정진오            XSS공격방지 위한 메소드 변경
+ * 수정일 수정자 수정내용
+ * ---------- --------- -------------------
+ * 2014.10.21 표준프레임워크 최초생성
+ * 2015.04.01 전여철 Test용 Open API confmKey encode추가
+ * 2020.10.29 신용호 KISA 보안약점 조치 (경로 조작 및 자원 삽입, 크로스사이트 스크립트)
+ * 2022.05.10 정진오 XSS공격방지 위한 메소드 변경
  *
  * @author 표준프레임워크
  * @since 2014.10.21
@@ -48,9 +48,12 @@ public class EgovAdressCntcController {
 		String confmKey = req.getParameter("confmKey");
 		String keyword = req.getParameter("keyword");
 		String apiUrl = "http://www.juso.go.kr/addrlink/addrLinkApi.do?currentPage=" + currentPage + "&countPerPage="
-			+ countPerPage + "&keyword=" + URLEncoder.encode(keyword, "UTF-8") + "&confmKey=" + confmKey;
-		URL url = new URL(EgovWebUtil.filePathBlackList(apiUrl));
-		try (BufferedReader br = new BufferedReader(new InputStreamReader(url.openStream(), "UTF-8"));) {//2022.01 Resources should be closed
+				+ countPerPage + "&keyword=" + URLEncoder.encode(keyword, "UTF-8") + "&confmKey=" + confmKey;
+		URL url = java.net.URI.create(EgovWebUtil.filePathBlackList(apiUrl)).toURL();
+		try (BufferedReader br = new BufferedReader(new InputStreamReader(url.openStream(), "UTF-8"));) {// 2022.01
+																											// Resources
+																											// should be
+																											// closed
 			StringBuilder sb = new StringBuilder();
 			String tempStr = null;
 			while (true) {
@@ -69,6 +72,7 @@ public class EgovAdressCntcController {
 
 	/**
 	 * 도로명주소 안내시스템에서 제공하는 Test용 Open API를 호출하여 주소 정보를 얻어온다.
+	 * 
 	 * @param req
 	 * @param model
 	 * @param response
@@ -82,10 +86,13 @@ public class EgovAdressCntcController {
 		String confmKey = req.getParameter("confmKey");
 		String keyword = req.getParameter("keyword");
 		String apiUrl = "http://www.juso.go.kr/addrlink/addrLinkApiTest.do?currentPage=" + currentPage
-			+ "&countPerPage=" + countPerPage + "&keyword=" + URLEncoder.encode(keyword, "UTF-8") + "&confmKey="
-			+ URLEncoder.encode(confmKey, "UTF-8");
-		URL url = new URL(EgovWebUtil.filePathBlackList(apiUrl));
-		try(BufferedReader br = new BufferedReader(new InputStreamReader(url.openStream(), "UTF-8"));){//2022.01 Resources should be closed
+				+ "&countPerPage=" + countPerPage + "&keyword=" + URLEncoder.encode(keyword, "UTF-8") + "&confmKey="
+				+ URLEncoder.encode(confmKey, "UTF-8");
+		URL url = java.net.URI.create(EgovWebUtil.filePathBlackList(apiUrl)).toURL();
+		try (BufferedReader br = new BufferedReader(new InputStreamReader(url.openStream(), "UTF-8"));) {// 2022.01
+																											// Resources
+																											// should be
+																											// closed
 			StringBuilder sb = new StringBuilder();
 			String tempStr = null;
 			while (true) {
